--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
+      "js": ["config.js" , "content.js"],
        "run_at": "document_idle"
     }
   ]
